# meltinv

./: .gitignore  LICENSE  README.md  examples.xlsx  pyproject.toml
meltinv/: __init__.py  cli.py  core.py  frac_correction.py  inversion.py  plot_ree.py
meltinv/data/: melt_average_pres.npy  melt_average_temp.npy  melt_max_pres.npy  melt_max_temp.npy  melt_min_pres.npy  melt_min_temp.npy  ree_average_Ce.npy  ree_average_Dy.npy  ree_average_Er.npy  ree_average_Eu.npy  ree_average_F.npy  ree_average_Gd.npy  ree_average_Ho.npy  ree_average_La.npy  ree_average_Lu.npy  ree_average_M.npy  ree_average_Nd.npy  ree_average_Pr.npy  ree_average_Sm.npy  ree_average_Tb.npy  ree_average_Tm.npy  ree_average_Yb.npy  ree_max_Ce.npy  ree_max_Dy.npy  ree_max_Er.npy  ree_max_Eu.npy  ree_max_F.npy  ree_max_Gd.npy  ree_max_Ho.npy  ree_max_La.npy  ree_max_Lu.npy  ree_max_M.npy  ree_max_Nd.npy  ree_max_Pr.npy  ree_max_Sm.npy  ree_max_Tb.npy  ree_max_Tm.npy  ree_max_Yb.npy  ree_min_Ce.npy  ree_min_Dy.npy  (+14 more)
