[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meltinv"
version = "0.1.0"
description = "Joint inversion of melt pressure, lithospheric thickness and source enrichment from REE data."
authors = [{ name = "Shihao Jiang" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24,<1.27",
  "scipy>=1.8,<1.10",
  "pandas>=2.0,<=2.1",
  "openpyxl",
  "matplotlib==3.9.1",
  "meltPT @ git+https://github.com/shihao-jiang/meltPT_fixed.git"
]
license = "MIT"

[project.scripts]
meltinv = "meltinv.cli:main"

[tool.setuptools.packages.find]
include = ["meltinv*"]

[tool.setuptools.package-data]
"meltinv" = ["data/*.npy"]
